--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3DShop | Complete Edition</title>
+    <title>3D|Shop </title>
     <style>
         :root {
             --main-color: #00ff88;
