--- a/index.html
+++ b/index.html
@@ -112,23 +112,35 @@
 <div class="catalog">
     <div class="item" onclick="viewProduct('bat men halment', 100, 'https://np.elegoo.com/images/247b3ca4413699ec013e56f3b4edde143b6ae2fc928fd39d9181aec27ee3c74a-1766445333159-2db0bc8b628fd3ae99277ed774834da30c099e4e4435ec75b436940bf43f01de.png?x-oss-process=image/resize,w_1200/format,webp', 'брелок для ключів є три коліри: синій жовтий сірий.')">
         <img src="https://np.elegoo.com/images/247b3ca4413699ec013e56f3b4edde143b6ae2fc928fd39d9181aec27ee3c74a-1766445333159-2db0bc8b628fd3ae99277ed774834da30c099e4e4435ec75b436940bf43f01de.png?x-oss-process=image/resize,w_1200/format,webp" style="width:100%;">
-        <div style="padding:15px;"><h3>bat men halment</h3><p>100 грн</p></div>
+        <div style="padding:15px;"><h3>bat men halment</h3><p style="color:var(--main-color); font-weight:bold; margin:10px 0 0 0;">100 грн</p></div>
     </div>
-
+	
+    <div class="item" onclick="viewProduct('mine keychain', 55, 'https://np.elegoo.com/images/496536636e35b7016066655441281390d9ff09fbc09add35bf862fb41f695772-1760992515096-2db0bc8b628fd3ae99277ed774834da30c099e4e4435ec75b436940bf43f01de.png?x-oss-process=image/resize,w_1200/format,webp', 'брелок для ключів є три коліри: синій жовтий сірий.')">
+        <img src="https://np.elegoo.com/images/496536636e35b7016066655441281390d9ff09fbc09add35bf862fb41f695772-1760992515096-2db0bc8b628fd3ae99277ed774834da30c099e4e4435ec75b436940bf43f01de.png?x-oss-process=image/resize,w_1200/format,webp" style="width:100%;">
+        <div style="padding:15px;"><h3>minecraft keychain</h3><p style="color:var(--main-color); font-weight:bold; margin:10px 0 0 0;">55 грн</p></div>
+    </div>
+	
+	
+</div>
 
 <div class="catalog">
     <div class="item" onclick="viewProduct('infinity cube',180 , 'https://np.elegoo.com/images/9cab0e1fea53ef1dd4d7a6b99555ac92824e8de9579208b0e09200034a8ff2d0-1757505059215-7dbe3709fd46b6f74b90713a5f2ab2f7faf6bff1210ea2b32dcd26376f6ac1bb.jpg?x-oss-process=image/resize,w_1200/format,webp', 'іграшка нескінчений куб є три коліри: синій жовтий сірий.')">
         <img src="https://np.elegoo.com/images/9cab0e1fea53ef1dd4d7a6b99555ac92824e8de9579208b0e09200034a8ff2d0-1757505059215-7dbe3709fd46b6f74b90713a5f2ab2f7faf6bff1210ea2b32dcd26376f6ac1bb.jpg?x-oss-process=image/resize,w_1200/format,webp" style="width:100%;">
-        <div style="padding:15px;"><h3>infinity cube</h3><p>180 грн</p></div>
+        <div style="padding:15px;"><h3>infinity cube</h3><p style="color:var(--main-color); font-weight:bold; margin:10px 0 0 0;">180 грн</p></div>
     </div>
-</div>
-
-<div class="catalog">
+	
     <div class="item" onclick="viewProduct('дуже гучний свисток ',30 , 'https://np.elegoo.com/images/b2ac5692dcd3ed015977a8ecebfaa39d6610ff3a99bcf5ee8b8508d2761c1938-1764864113490-5a940599652ba10fde5e0b9836d78c9a21bd67e6ef1d85883d077780436fc61c.png?x-oss-process=image/resize,w_1200/format,webp', 'свисток гучний  є три коліри: синій жовтий сірий.')">
         <img src="https://np.elegoo.com/images/3ae7f881ea926f47f4188f9e9ce4ba22b0ca60e8023c6ab8144b7462766f5c48-1764864091964-2db0bc8b628fd3ae99277ed774834da30c099e4e4435ec75b436940bf43f01de.png?x-oss-process=image/resize,w_1200/format,webp" style="width:100%;">
-        <div style="padding:15px;"><h3>EMERGENCY WHISTLE </h3><p>30 грн</p></div>
+        <div style="padding:15px;"><h3>EMERGENCY WHISTLE </h3><p style="color:var(--main-color); font-weight:bold; margin:10px 0 0 0;">30 грн</p></div>
     </div>
 </div>
+	
+	
+	
+	
+</div>
+
+
 
 
 
