--- a/index.html
+++ b/index.html
@@ -110,35 +110,37 @@
 </header>
 
 <div class="catalog">
-    <div class="item" onclick="viewProduct('bat men halment', 100, 'https://np.elegoo.com/images/247b3ca4413699ec013e56f3b4edde143b6ae2fc928fd39d9181aec27ee3c74a-1766445333159-2db0bc8b628fd3ae99277ed774834da30c099e4e4435ec75b436940bf43f01de.png?x-oss-process=image/resize,w_1200/format,webp', 'брелок для ключів є три коліри: синій жовтий сірий.')">
+    <div class="item" onclick="viewProduct('bat men halment', 60, 'https://np.elegoo.com/images/247b3ca4413699ec013e56f3b4edde143b6ae2fc928fd39d9181aec27ee3c74a-1766445333159-2db0bc8b628fd3ae99277ed774834da30c099e4e4435ec75b436940bf43f01de.png?x-oss-process=image/resize,w_1200/format,webp', 'брелок для ключів є три коліри: синій жовтий сірий.')">
         <img src="https://np.elegoo.com/images/247b3ca4413699ec013e56f3b4edde143b6ae2fc928fd39d9181aec27ee3c74a-1766445333159-2db0bc8b628fd3ae99277ed774834da30c099e4e4435ec75b436940bf43f01de.png?x-oss-process=image/resize,w_1200/format,webp" style="width:100%;">
-        <div style="padding:15px;"><h3>bat men halment</h3><p style="color:var(--main-color); font-weight:bold; margin:10px 0 0 0;">100 грн</p></div>
+        <div style="padding:15px;"><h3>bat men halment</h3><p style="color:var(--main-color); font-weight:bold; margin:10px 0 0 0;">60 грн</p></div>
     </div>
 	
-    <div class="item" onclick="viewProduct('minecraft keychain', 55, 'https://np.elegoo.com/images/496536636e35b7016066655441281390d9ff09fbc09add35bf862fb41f695772-1760992515096-2db0bc8b628fd3ae99277ed774834da30c099e4e4435ec75b436940bf43f01de.png?x-oss-process=image/resize,w_1200/format,webp', 'брелок для ключів є три коліри: синій жовтий сірий.')">
+    <div class="item" onclick="viewProduct('minecraft keychain', 33, 'https://np.elegoo.com/images/496536636e35b7016066655441281390d9ff09fbc09add35bf862fb41f695772-1760992515096-2db0bc8b628fd3ae99277ed774834da30c099e4e4435ec75b436940bf43f01de.png?x-oss-process=image/resize,w_1200/format,webp', 'брелок для ключів є три коліри: синій жовтий сірий.')">
         <img src="https://np.elegoo.com/images/496536636e35b7016066655441281390d9ff09fbc09add35bf862fb41f695772-1760992515096-2db0bc8b628fd3ae99277ed774834da30c099e4e4435ec75b436940bf43f01de.png?x-oss-process=image/resize,w_1200/format,webp" style="width:100%;">
-        <div style="padding:15px;"><h3>minecraft keychain</h3><p style="color:var(--main-color); font-weight:bold; margin:10px 0 0 0;">55 грн</p></div>
+        <div style="padding:15px;"><h3>minecraft keychain</h3><p style="color:var(--main-color); font-weight:bold; margin:10px 0 0 0;">33 грн</p></div>
     </div>
 	
 	
 </div>
 
 <div class="catalog">
-    <div class="item" onclick="viewProduct('infinity cube',180 , 'https://np.elegoo.com/images/9cab0e1fea53ef1dd4d7a6b99555ac92824e8de9579208b0e09200034a8ff2d0-1757505059215-7dbe3709fd46b6f74b90713a5f2ab2f7faf6bff1210ea2b32dcd26376f6ac1bb.jpg?x-oss-process=image/resize,w_1200/format,webp', 'іграшка нескінчений куб є три коліри: синій жовтий сірий.')">
+    <div class="item" onclick="viewProduct('infinity cube',70 , 'https://np.elegoo.com/images/9cab0e1fea53ef1dd4d7a6b99555ac92824e8de9579208b0e09200034a8ff2d0-1757505059215-7dbe3709fd46b6f74b90713a5f2ab2f7faf6bff1210ea2b32dcd26376f6ac1bb.jpg?x-oss-process=image/resize,w_1200/format,webp', 'іграшка нескінчений куб є три коліри: синій жовтий сірий.')">
         <img src="https://np.elegoo.com/images/9cab0e1fea53ef1dd4d7a6b99555ac92824e8de9579208b0e09200034a8ff2d0-1757505059215-7dbe3709fd46b6f74b90713a5f2ab2f7faf6bff1210ea2b32dcd26376f6ac1bb.jpg?x-oss-process=image/resize,w_1200/format,webp" style="width:100%;">
-        <div style="padding:15px;"><h3>infinity cube</h3><p style="color:var(--main-color); font-weight:bold; margin:10px 0 0 0;">180 грн</p></div>
+        <div style="padding:15px;"><h3>infinity cube</h3><p style="color:var(--main-color); font-weight:bold; margin:10px 0 0 0;">70 грн</p></div>
     </div>
 	
-    <div class="item" onclick="viewProduct('дуже гучний свисток ',30 , 'https://np.elegoo.com/images/b2ac5692dcd3ed015977a8ecebfaa39d6610ff3a99bcf5ee8b8508d2761c1938-1764864113490-5a940599652ba10fde5e0b9836d78c9a21bd67e6ef1d85883d077780436fc61c.png?x-oss-process=image/resize,w_1200/format,webp', 'свисток гучний  є три коліри: синій жовтий сірий.')">
+    <div class="item" onclick="viewProduct('дуже гучний свисток ',15 , 'https://np.elegoo.com/images/b2ac5692dcd3ed015977a8ecebfaa39d6610ff3a99bcf5ee8b8508d2761c1938-1764864113490-5a940599652ba10fde5e0b9836d78c9a21bd67e6ef1d85883d077780436fc61c.png?x-oss-process=image/resize,w_1200/format,webp', 'свисток гучний  є три коліри: синій жовтий сірий.')">
         <img src="https://np.elegoo.com/images/3ae7f881ea926f47f4188f9e9ce4ba22b0ca60e8023c6ab8144b7462766f5c48-1764864091964-2db0bc8b628fd3ae99277ed774834da30c099e4e4435ec75b436940bf43f01de.png?x-oss-process=image/resize,w_1200/format,webp" style="width:100%;">
-        <div style="padding:15px;"><h3>EMERGENCY WHISTLE </h3><p style="color:var(--main-color); font-weight:bold; margin:10px 0 0 0;">30 грн</p></div>
+        <div style="padding:15px;"><h3>EMERGENCY WHISTLE </h3><p style="color:var(--main-color); font-weight:bold; margin:10px 0 0 0;">15 грн</p></div>
     </div>
 </div>
-	
-	
-	
-	
 </div>
+	
+
+
+  
+	
+	
 
 
 
@@ -159,13 +161,34 @@
 </div>
 
 <div class="catalog">
-    <div class="item" onclick="viewProduct('Підставка для телефону', 150, 'https://np.elegoo.com/images/fe37bde27648403d9468d0c4082ee8827b216d6964b8b6bef07d4b674ce13712-1759231505371-7395a45d8e992ae7b9dc217557f101b6a02dc75d34e18dfccd2a1d014f317469.png?x-oss-process=image/resize,w_1200/format,webp', 'Зручна та міцна підставка для вашого смартфону. Виготовлена за допомогою 3D-друку. Оберіть свій синій сірий та жовтий.')">
+    <div class="item" onclick="viewProduct('Підставка для телефону', 90, 'https://np.elegoo.com/images/fe37bde27648403d9468d0c4082ee8827b216d6964b8b6bef07d4b674ce13712-1759231505371-7395a45d8e992ae7b9dc217557f101b6a02dc75d34e18dfccd2a1d014f317469.png?x-oss-process=image/resize,w_1200/format,webp', 'Зручна та міцна підставка для вашого смартфону. Виготовлена за допомогою 3D-друку. Оберіть свій синій сірий та жовтий.')">
         <img src="https://np.elegoo.com/images/fe37bde27648403d9468d0c4082ee8827b216d6964b8b6bef07d4b674ce13712-1759231505371-7395a45d8e992ae7b9dc217557f101b6a02dc75d34e18dfccd2a1d014f317469.png?x-oss-process=image/resize,w_1200/format,webp" style="width:100%;" alt="Phone Stand">
         <div style="padding:15px;">
             <h3 style="margin:0;">pfone stand</h3>
-            <p style="color:var(--main-color); font-weight:bold; margin:10px 0 0 0;">150 грн</p>
+            <p style="color:var(--main-color); font-weight:bold; margin:10px 0 0 0;">90 грн</p>
         </div>
     </div>
+	 <div class="item" onclick="viewProduct('Demogorgon on monitor', 90, 'https://np.elegoo.com/images/846ee9858d35dc8aa5fdcd3087c0336cd1e3ccadfe65a7af57254b316e9d1e2e-1768128182592-a9c42c623f5a0aa73c17d5b6160980032ac2b5c7553055ac11fb499b71c45e50.jpg?x-oss-process=image/resize,w_1200/format,webp', 'Зручна та міцна підставка для вашого смартфону. Виготовлена за допомогою 3D-друку. Оберіть свій синій сірий та жовтий.')">
+        <img src="https://np.elegoo.com/images/846ee9858d35dc8aa5fdcd3087c0336cd1e3ccadfe65a7af57254b316e9d1e2e-1768128182592-a9c42c623f5a0aa73c17d5b6160980032ac2b5c7553055ac11fb499b71c45e50.jpg?x-oss-process=image/resize,w_1200/format,webp" style="width:100%;" alt="Demogorgon on monitor">
+        <div style="padding:15px;">
+            <h3 style="margin:0;">Demogorgon on monitor</h3>
+            <p style="color:var(--main-color); font-weight:bold; margin:10px 0 0 0;">90 грн</p>
+        </div>
+		</div>
+	<div class="item" onclick="viewProduct('boat-shaped bowl', 70, 'https://np.elegoo.com/images/846ee9858d35dc8aa5fdcd3087c0336cd1e3ccadfe65a7af57254b316e9d1e2e-1768128182592-a9c42c623f5a0aa73c17d5b6160980032ac2b5c7553055ac11fb499b71c45e50.jpg?x-oss-process=image/resize,w_1200/format,webp', 'Зручна та міцна підставка для вашого смартфону. Виготовлена за допомогою 3D-друку. Оберіть свій синій сірий та жовтий.')">
+        <img src="https://np.elegoo.com/images/846ee9858d35dc8aa5fdcd3087c0336cd1e3ccadfe65a7af57254b316e9d1e2e-1768128182592-a9c42c623f5a0aa73c17d5b6160980032ac2b5c7553055ac11fb499b71c45e50.jpg?x-oss-process=image/resize,w_1200/format,webp" style="width:100%;" alt="boat-shaped bowl">
+        <div style="padding:15px;">
+            <h3 style="margin:0;">boat-shaped bowl</h3>
+            <p style="color:var(--main-color); font-weight:bold; margin:10px 0 0 0;">70 грн</p>
+        </div>
+	
+	
+	
+	
+	
+	
+	
+	
 </div>
 
 <div id="settings-modal" class="modal">
